--- a/src/css/style.css
+++ b/src/css/style.css
@@ -156,6 +156,7 @@ border-bottom: 0;
     .arrow{
         left: 90%;
     }
+
 }
 
 @media (max-width: 600px){
@@ -166,6 +167,13 @@ border-bottom: 0;
         text-align: center;
         padding: 0;
         margin: 0;
+    }
+    .footer-padding{
+        padding: 1rem;
+    }
+    .footer-padding-text{
+        padding-right: 1.5rem;
+        padding-left: 1.5rem;
     }
 }
 
